--- a/Frontend/css/estilospagin.css
+++ b/Frontend/css/estilospagin.css
@@ -7,7 +7,7 @@
 }
 
 body{
-    background-image: url(../assests/img/fondo.jpg);
+    background-image: url(../assests/img/fondo2.jpg);
     background-size: cover;
     display: flex;
     align-items: center;
